--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h1>
           font size: 32px
         </h1>
-        <div>32px 在任何寬度都適合</div>
+        <div>32px 展示</div>
         <div class="text-block" style="font-size: 32px">
           32px。範例文字：我在蘭嶼天氣晴。飛魚真好吃。暈船不舒服。
           <br>123456789 ABCDEFG abcdefg
@@ -107,6 +107,18 @@
           3vw 則在 small 以下有很理想的放大速度，在 medium 放大速度稍快，可依使用情境選用。
         </div>
       </div>
+
+
+      <div class="block">
+        <h1>
+          font size: 10vw (3vw = <span id="example-10"></span>px)
+        </h1>
+        <div>10vw 在 small 以下可以當做標題來使用，在 medium 以上則太大</div>
+        <div class="text-block" style="font-size: 3vw">
+          10vw 在 small 以下可以當做標題來使用，在 medium 以上則太大
+        </div>
+      </div>
+
 
     </div>
 
